Исправил pom.xml в stats-server и так же тесты